MDEV-9045 Inconsistent handling of "ALGORITHM=INPLACE" with PERSISTENT generated columns

Only set Alter_inplace_info::ALTER_COLUMN_VCOL flag if
a vcol might be affected by the ALTER TABLE statement